Add extension-key to composer.json (required in future)

--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,10 @@
     "psr-4": {
       "Slub\\SlubWebLdp\\": "Classes/"
     }
+  },
+  "extra": {
+    "typo3/cms": {
+       "extension-key": "ddb_kitodo_zeitungsportal"
+    }
   }
 }
