--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   "license": "GPL-3.0-or-later",
   "require": {
     "typo3/cms-core": "~9.5.24",
-    "kitodo/presentation": "~3.1.2|dev-master"
+    "kitodo/presentation": "*"
   },
   "autoload": {
     "psr-4": {
