--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
   ],
   "license": "GPL-3.0-or-later",
   "require": {
-    "typo3/cms-core": "~9.5.29",
-    "kitodo/presentation": "^3.3|dev-master|dev-ddb-changes"
+    "typo3/cms-core": "~9.5.31",
+    "kitodo/presentation": "^3.3"
   },
   "autoload": {
     "psr-4": {
