--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   "license": "GPL-3.0-or-later",
   "require": {
     "typo3/cms-core": "^10.4.45|^11.5",
-    "kitodo/presentation": "^5.0"
+    "kitodo/presentation": "@dev"
   },
   "autoload": {
     "psr-4": {
