--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
   ],
   "license": "GPL-3.0-or-later",
   "require": {
-    "typo3/cms-core": "^11.5|^12.4",
-    "kitodo/presentation": "5.0.6"
+    "typo3/cms-core": "^10.4|^11.5",
+    "kitodo/presentation": "~5.0.0"
   },
   "autoload": {
     "psr-4": {
