Revert "update to dlf 5.1"
This reverts commit da2be6cdf24de86af7dad21925f3caeb7a31e596.

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   "license": "GPL-3.0-or-later",
   "require": {
     "typo3/cms-core": "^10.4|^11.5",
-    "kitodo/presentation": "^5.1|^5.1@RC"
+    "kitodo/presentation": "~5.0.0"
   },
   "autoload": {
     "psr-4": {
